stuf/src/p4/tests/t019.err
Semantic error on line 2: Variable 'pyramid' is not an array.
