stuf/src/p4/tests/t019.gpl
triangle pyramid;
int top=pyramid[1].x; //error: variable is not an array
